# evg_config_changes_verifier

./: README.md  pyproject.toml
src/evg_config_changes_verifier/: cli.py  orchestrator.py
src/evg_config_changes_verifier/clients/: evg_cli_proxy.py  git_cli_proxy.py
src/evg_config_changes_verifier/models/: evg_models.py
src/evg_config_changes_verifier/services/: evg_config_service.py
src/evg_config_changes_verifier/update_checks/: base_check.py  functions_check.py  task_groups_check.py  tasks_check.py  variants_check.py
